--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,3 +89,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_assets:
+  assets_path: assets/
+  output_path: lib/core
+  filename: app_assets.dart
+  field_prefix: image
