--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   flutter_credit_card: ^4.0.1
+  styled_divider: ^1.0.5
 
 dev_dependencies:
   flutter_test:
