--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_credit_card: ^4.0.1
   styled_divider: ^1.0.5
+  flutter_stripe: ^9.5.0+1
+  stripe_android: ^9.5.0+1
 
 dev_dependencies:
   flutter_test:
